--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -1,11 +1,11 @@
 # data
 data:
-  instruct_data: ""  # Fill
+  instruct_data: "/home/rileywebb/botly-dataset.jsonl"  # Fill
   data: ""  # Optionally fill with pretraining data 
-  eval_instruct_data: ""  # Optionally fill
+  eval_instruct_data: "/home/rileywebb/botly-datset-eval.jsonl"  # Optionally fill
 
 # model
-model_id_or_path: ""  # Change to downloaded path
+model_id_or_path: "/home/rileywebb/mistral_models/nemo"  # Change to downloaded path
 lora:
   rank: 64
 
@@ -14,8 +14,8 @@ seq_len: 32768
 batch_size: 1
 max_steps: 300
 optim:
-  lr: 6.e-5
-  weight_decay: 0.1
+  lr: 1e-5
+  weight_decay: 0.01
   pct_start: 0.05
 
 # other
