--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -25,12 +25,12 @@ eval_freq: 100
 no_eval: False
 ckpt_freq: 100
 
-save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
+save_adapters: False  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: ""  # Fill
+run_dir: "/home/rileywebb/mistral-finetune/output-dir/onlyfans-tune"  # Fill
 
 wandb:
-  project: "" # your wandb project name
-  run_name: "" # your wandb run name
-  key: "" # your wandb api key
+  project: "suada" # your wandb project name
+  run_name: "onlyfans_tune" # your wandb run name
+  key: "35a03d1d2de16b755251b46657e20294b34e1305" # your wandb api key
   offline: False
