--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -13,9 +13,10 @@ lora:
 seq_len: 32768
 batch_size: 1
 max_steps: 300
+gradient_accumulation_steps: 8
 optim:
-  lr: 6.e-5
-  weight_decay: 0.1
+  lr: 1e-5
+  weight_decay: 0.01
   pct_start: 0.05
 
 # other
