--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -31,7 +31,7 @@ save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge 
 run_dir: ""  # Fill
 
 wandb:
-  project: "" # your wandb project name
-  run_name: "" # your wandb run name
-  key: "" # your wandb api key
+  project: "suada" # your wandb project name
+  run_name: "onlyfans_tune" # your wandb run name
+  key: "35a03d1d2de16b755251b46657e20294b34e1305" # your wandb api key
   offline: False
