--- a/example/roleplay.yaml
+++ b/example/roleplay.yaml
@@ -1,8 +1,8 @@
 # data
 data:
-  instruct_data: "/path/to/cleaned_onlyfans_dataset.jsonl"  # Update with your dataset path
+  instruct_data: "/home/rileywebb/roleplay-dataset.jsonl"  # Update with your dataset path
   data: ""  # No pretraining data used
-  eval_instruct_data: "/path/to/onlyfans_eval_dataset.jsonl"  # Optionally update if you have a validation set
+  eval_instruct_data: "/home/rileywebb/roleplay-dataset-eval.jsonl"  # Optionally update if you have a validation set
 
 # model
 model_id_or_path: "/path/to/mistral_models/7B_instruct"  # Update with your model path
@@ -27,7 +27,7 @@ ckpt_freq: 100
 
 save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge LoRA adapter into the base model and save full fine-tuned model
 
-run_dir: ""  # Fill
+run_dir: "/home/rileywebb/mistral-finetune/output-dir/roleplay-tune"  # Fill
 
 wandb:
   project: "suada" # your wandb project name
