--- a/example/sonnet-roleplay.yaml
+++ b/example/sonnet-roleplay.yaml
@@ -31,6 +31,6 @@ run_dir: "/home/rileywebb/mistral-finetune/output-dir/sonnet-roleplay-tune"  # F
 
 wandb:
   project: "suada" # your wandb project name
-  run_name: "roleyplay_tune" # your wandb run name
+  run_name: "sonnet_roleyplay_tune" # your wandb run name
   key: "35a03d1d2de16b755251b46657e20294b34e1305" # your wandb api key
   offline: False
